--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-redux": "^8.0.2",
         "react-responsive-masonry": "^2.1.6",
         "react-toastify": "^9.0.8",
+        "react-use-scroll-snap": "^0.0.4",
         "sal.js": "^0.8.5",
         "sass": "^1.54.5",
         "swiper": "^8.3.2",
