--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@formspree/react": "^2.5.1",
         "@popperjs/core": "^2.11.6",
         "@reduxjs/toolkit": "^1.8.5",
         "@svgr/webpack": "^6.3.1",
@@ -30,6 +31,7 @@
         "react-rangeslider": "^2.2.0",
         "react-redux": "^8.0.2",
         "react-responsive-masonry": "^2.1.6",
+        "react-search-autocomplete": "^8.5.2",
         "react-toastify": "^9.0.8",
         "react-use-scroll-snap": "^0.0.4",
         "sal.js": "^0.8.5",
