--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@formspree/react": "^2.5.1",
+        "@fullpage/react-fullpage": "^0.1.42",
         "@popperjs/core": "^2.11.6",
         "@reduxjs/toolkit": "^1.8.5",
         "@svgr/webpack": "^6.3.1",
