--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "dependencies": {
         "@formspree/react": "^2.5.1",
         "@fullpage/react-fullpage": "^0.1.42",
+        "@payloadcms/db-mongodb": "^3.0.0-beta.11",
+        "@payloadcms/next": "^3.0.0-beta.11",
+        "@payloadcms/richtext-lexical": "^3.0.0-beta.11",
         "@popperjs/core": "^2.11.6",
         "@reduxjs/toolkit": "^1.8.5",
         "@svgr/webpack": "^6.3.1",
@@ -22,6 +25,7 @@
         "framer-motion": "^7.6.7",
         "next": "12.2.5",
         "next-themes": "^0.2.0",
+        "payload": "^3.0.0-beta.11",
         "react": "18.2.0",
         "react-countup": "^6.3.1",
         "react-dom": "18.2.0",
