--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "edu-blink",
+    "name": "masaru",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -25,7 +25,6 @@
         "framer-motion": "^7.6.7",
         "next": "12.2.5",
         "next-themes": "^0.2.0",
-        "payload": "^3.0.0-beta.11",
         "react": "18.2.0",
         "react-countup": "^6.3.1",
         "react-dom": "18.2.0",
