--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@formspree/react": "^2.5.1",
         "@fullpage/react-fullpage": "^0.1.42",
         "@popperjs/core": "^2.11.6",
         "@reduxjs/toolkit": "^1.8.5",
